last changes before deploy

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-PORT = 3000
-MOOD = DEV
+MOOD = PROD
 DB_URI_DEV=mongodb+srv://horiahamza:horia123@cluster0.jwmcywp.mongodb.net/TypeScriptApp
-DB_URI_PROD=mongodb://production_server/prod_database
+DB_URI_PROD=mongodb+srv://horiahamza:horia123@cluster0.jwmcywp.mongodb.net/TypeScriptApp
 API_KEY=api_key
 API_SECRET=api_secret
 BASEURL= '/api/v1'
