--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "typescript-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "commonjs",
+  "engines": {"node": "v18.17.1."},
   "scripts": {
     "build": "tsc --watch",
-    "start": "tsc && node dist/src/app.js",
-    "dev": "nodemon dist/src/app.js"
+    "start": "tsc && node dist/src/index.js",
+    "dev": "nodemon dist/src/index.js"
   },
   "keywords": [],
   "author": "",
