--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "commonjs",
-  "engines": {"node": "v18.17.1."},
+  "engines": {
+    "node": "v18.17.1."
+  },
   "scripts": {
     "build": "tsc --watch",
     "start": "tsc && node dist/src/index.js",
@@ -17,6 +19,7 @@
     "@types/node": "^20.6.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.2",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.3"
   }
